<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maze_navigation</name>
  <version>0.0.1</version>
  <description>Maze navigation ROS2 package with Bug Algorithm</description>
  <maintainer email="ikechukwusundday5699@gmail.com">precious_weal</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_msgs</depend>

  <!-- TurtleBot3 Dependencies -->
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_bringup</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
